--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,16 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<!-- Definindo a versão do Spring Boot -->
+		<spring.boot.version>3.4.4</spring.boot.version>
+		<!-- Habilitando melhor debug do Hibernate e mostrando as queries SQL -->
+		<spring.jpa.hibernate.ddl-auto>update</spring.jpa.hibernate.ddl-auto>
+		<spring.jpa.show-sql>true</spring.jpa.show-sql>
+		<spring.jpa.properties.hibernate.dialect>org.hibernate.dialect.MySQL8Dialect</spring.jpa.properties.hibernate.dialect>
 	</properties>
 
 	<dependencies>
-		<!-- Spring Boot web e JPA -->
+		<!-- Spring Boot Web e JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -34,27 +40,28 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- Thymeleaf correto para Spring Boot 3 -->
+		<!-- Thymeleaf (corrigido para Spring Boot 3.x) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
-		<!-- MySQL -->
+		<!-- MySQL Connector (versão mais recente) -->
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.32</version> <!-- Versão mais recente do MySQL Connector -->
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Lombok -->
+		<!-- Lombok (para geração de código e getters/setters) -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
 
-		<!-- Testes -->
+		<!-- Testes: Incluindo JUnit, AssertJ, e Spring Boot Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -64,6 +71,7 @@
 
 	<build>
 		<plugins>
+			<!-- Maven Compiler Plugin: Necessário para usar Lombok -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -76,6 +84,8 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+
+			<!-- Spring Boot Maven Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -90,5 +100,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
