--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.application.name=tcc
 
-# Configuração do banco de dados MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/academymanager
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Configuração do Hibernate (JPA)
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=10
