--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,12 @@
 
 		<!-- MySQL Connector (versão mais recente) -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.32</version> <!-- Versão mais recente do MySQL Connector -->
-			<scope>runtime</scope>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version> <!-- Ou a versão mais recente -->
 		</dependency>
+
+
 
 		<!-- Lombok (para geração de código e getters/setters) -->
 		<dependency>
