--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,10 @@
 
 		<!-- MySQL Connector (versão mais recente) -->
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.7.3</version> <!-- Ou a versão mais recente -->
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
 		</dependency>
-
 
 
 		<!-- Lombok (para geração de código e getters/setters) -->
