--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.application.name=tcc
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/academymanager
-spring.datasource.username=postgres
+# Configurações do MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/academymanager?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
 
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Desativa página de erro padrão do Spring
 server.error.whitelabel.enabled=false
